Fix navbar flex gap

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -58,10 +58,7 @@ ul {
 
 .left-menu {
   display: flex;
-}
-
-.logo {
-  padding: 0 8px;
+  gap: 8px;
 }
 
 .left-menu ul {
